--- a/book.html
+++ b/book.html
@@ -349,9 +349,30 @@
 
                             <hr class="bookHR">
 
+                            <div class="bookingInformationRow">
+                                <span>Betalningsuppgifter</span>
+                            </div>
+
+                            <div class="bookingInformationRow">
+                                <div>Totalt</div>
+                                <div>kr</div>
+                            </div>
+
                             <div class="confirm">
-                                <button onclick="goBack()">Bekräfta bokning</button>
+                                <button onclick="goBack()">Bekräfta Bokning</button>
                                 <button onclick="confirmBooking()">Tillbaka</button>
+                            </div>
+
+                            <div class="bookingInformationRow">
+                                <h2>Avbokningspolicy</h2>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam iure error sapiente
+                                    incidunt,
+                                    sed
+                                    sequi voluptatem accusamus voluptates, beatae aliquam quae dicta perferendis
+                                    adipisci vitae
+                                    earum
+                                    explicabo ab aliquid ratione suscipit illo.</p>
+
                             </div>
 
                         </div>
