--- a/book.html
+++ b/book.html
@@ -253,13 +253,13 @@
                                 <div class="selectPaymentWheel">
                                     <select required>
                                         <option value="" disabled selected>Betalningsalternativ</option>
-                                        <option value="option1">Betala Nu</option>
-                                        <option value="option2">Faktura</option>
+                                        <option value="payNow">Betala Nu</option>
+                                        <option value="invoice">Faktura</option>
                                     </select>
                                 </div>
                             </div>
 
-                            <div class="cardPayment">
+                            <div class="cardPayment hidden">
 
                                 <div class="bookInputRow">
                                     <div class="paymentCards">
@@ -326,12 +326,11 @@
                                                 autocomplete="off">
                                         </div>
                                     </div>
-
                                 </form>
 
                             </div>
 
-                            <div class="invoicePayment">
+                            <div class="invoicePayment hidden">
 
                                 <form>
 
