--- a/book.html
+++ b/book.html
@@ -73,6 +73,7 @@
                 <section class="serviceInfo">
                     <h1 class="serviceName">Tjänstens namn</h1>
                     <p class="serviceInfoText">Se tillgängliga tider och boka den eller de tider som passar dig</p>
+                    <p class="paymentInfoText">Fyll i formuläret för att avsluta din bokning</p>
                 </section>
 
                 <hr class="bookHR">
@@ -406,8 +407,8 @@
                             </div>
 
                             <div class="confirmBackButtons">
-                                <button class="confirmButton" onclick="goBack()">Bekräfta Bokning</button>
-                                <button class="backButton" onclick="confirmBooking()">❮ Tillbaka</button>
+                                <button class="confirmButton" onclick="confirmBooking()">Bekräfta Bokning</button>
+                                <button class="backButton" onclick="goBack()">❮ Tillbaka</button>
                             </div>
 
                             <hr class="bookHR">
