--- a/book.html
+++ b/book.html
@@ -21,6 +21,11 @@
 
     <script defer src="JS/index.js"></script>
     <script defer src="JS/book.js"></script>
+    <script defer src="JS/calendar.js"></script>
+    <script defer src="JS/priceGenerator.js"></script>
+    <script defer src="JS/regionUpdate.js"></script>
+    <script defer src="JS/time.js"></script>
+    <script defer src="JS/payment.js"></script>
 
     <!--  Raleway  -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
