--- a/book.html
+++ b/book.html
@@ -195,8 +195,6 @@
 
                 </section>
 
-
-
                 <section class="checkoutForm">
 
                     <div class="bookingFromContainer">
@@ -209,41 +207,41 @@
 
                             <hr class="bookHR">
 
-
                             <form>
 
                                 <div class="bookInputRow">
                                     <div class="bookInputGroup">
-                                        <label>Förnamn*</label>
-                                        <input type="text" placeholder="" name="firstname" required autocomplete="off">
+                                        <label for="fname">Förnamn*</label>
+                                        <input type="text" placeholder="" name="firstname" id="fname" required
+                                            autocomplete="off">
                                     </div>
 
                                     <div class="bookInputGroup">
-                                        <label>Efternamn*</label>
-                                        <input type="text" placeholder="" name="Surname" required autocomplete="off">
+                                        <label for="sname">Efternamn*</label>
+                                        <input type="text" placeholder="" name="Surname" id="sname" required autocomplete="off">
                                     </div>
 
                                 </div>
 
                                 <div class="bookInputRow">
                                     <div class="bookInputGroupFullWidth">
-                                        <label>Personnummer*</label>
-                                        <input type="number" placeholder="" name="socialSecurityNumber" required
-                                            autocomplete="off">
+                                        <label for="socialSecNumber">Personnummer*</label>
+                                        <input type="number" placeholder="ÅÅÅÅ-MM-DD-XXXX" name="socialSecurityNumber" id="socialSecNumber"
+                                            required autocomplete="off">
                                     </div>
                                 </div>
 
                                 <div class="bookInputRow">
                                     <div class="bookInputGroup">
 
-                                        <label>Email Address*</label>
-                                        <input type="email" placeholder="" name="emailAddress" required
+                                        <label for="eaddress">Email Address*</label>
+                                        <input type="email" placeholder="" name="emailAddress" id="eaddress" required
                                             autocomplete="off">
                                     </div>
 
                                     <div class="bookInputGroup">
-                                        <label>Telefonnummer*</label>
-                                        <input type="number" placeholder="" name="phoneNumber" required
+                                        <label for="pNumber">Telefonnummer*</label>
+                                        <input type="number" placeholder="" name="phoneNumber" id="pNumber" required
                                             autocomplete="off">
                                     </div>
                                 </div>
@@ -307,28 +305,28 @@
 
                                     <div class="bookInputRow">
                                         <div class="bookInputGroup">
-                                            <label>Kortnamn*</label>
-                                            <input type="text" placeholder="" name="cardname" required
+                                            <label  for="cardName">Kortnamn*</label>
+                                            <input type="text" placeholder="" name="cardname" id="cardName" required
                                                 autocomplete="off">
                                         </div>
 
                                         <div class="bookInputGroup">
-                                            <label>Kortnummer*</label>
-                                            <input type="number" placeholder="" name="cardnumber" required
-                                                autocomplete="off">
+                                            <label for="cardNumber">Kortnummer*</label>
+                                            <input type="number" placeholder="XXXX XXXX XXXX XXXX" name="cardnumber"
+                                             id="cardNumber"   required autocomplete="off">
                                         </div>
                                     </div>
 
                                     <div class="bookInputRow">
                                         <div class="bookInputGroup">
-                                            <label>Utgångsdatum*</label>
-                                            <input type="number" placeholder="" name="emailAddress" required
+                                            <label for="expirationDate">Utgångsdatum*</label>
+                                            <input type="number" placeholder="XX/XX" name="expirationdate" id="expirationDate"  required
                                                 autocomplete="off">
                                         </div>
 
                                         <div class="bookInputGroup">
-                                            <label>CVV*</label>
-                                            <input type="number" placeholder="" name="phoneNumber" required
+                                            <label for="CVV">CVV*</label>
+                                            <input type="number" placeholder="XXX" name="cvv" id="CVV" required
                                                 autocomplete="off">
                                         </div>
                                     </div>
@@ -342,22 +340,22 @@
 
                                     <div class="bookInputRow">
                                         <div class="bookInputGroupFullWidth">
-                                            <label>Adress*</label>
-                                            <input type="text" placeholder="" name="emailAddress" required
+                                            <label for="homeAddress">Adress*</label>
+                                            <input type="text" placeholder="" name="address" id="homeAddress" required
                                                 autocomplete="off">
                                         </div>
                                     </div>
 
                                     <div class="bookInputRow">
                                         <div class="bookInputGroup">
-                                            <label>Postnummer*</label>
-                                            <input type="number" placeholder="" name="emailAddress" required
+                                            <label for="postalCode">Postnummer*</label>
+                                            <input type="number" placeholder="" name="zipcode" id="postalCode" required
                                                 autocomplete="off">
                                         </div>
 
                                         <div class="bookInputGroup">
-                                            <label>Stad*</label>
-                                            <input type="text" placeholder="" name="phoneNumber" required
+                                            <label for="town">Stad*</label>
+                                            <input type="text" placeholder="" name="city" id="town" required
                                                 autocomplete="off">
                                         </div>
                                     </div>
