--- a/book.html
+++ b/book.html
@@ -218,7 +218,8 @@
 
                                     <div class="bookInputGroup">
                                         <label for="sname">Efternamn*</label>
-                                        <input type="text" placeholder="" name="Surname" id="sname" required autocomplete="off">
+                                        <input type="text" placeholder="" name="Surname" id="sname" required
+                                            autocomplete="off">
                                     </div>
 
                                 </div>
@@ -226,8 +227,8 @@
                                 <div class="bookInputRow">
                                     <div class="bookInputGroupFullWidth">
                                         <label for="socialSecNumber">Personnummer*</label>
-                                        <input type="number" placeholder="ÅÅÅÅ-MM-DD-XXXX" name="socialSecurityNumber" id="socialSecNumber"
-                                            required autocomplete="off">
+                                        <input type="number" placeholder="ÅÅÅÅ-MM-DD-XXXX" name="socialSecurityNumber"
+                                            id="socialSecNumber" required autocomplete="off">
                                     </div>
                                 </div>
 
@@ -305,7 +306,7 @@
 
                                     <div class="bookInputRow">
                                         <div class="bookInputGroup">
-                                            <label  for="cardName">Kortnamn*</label>
+                                            <label for="cardName">Kortnamn*</label>
                                             <input type="text" placeholder="" name="cardname" id="cardName" required
                                                 autocomplete="off">
                                         </div>
@@ -313,15 +314,15 @@
                                         <div class="bookInputGroup">
                                             <label for="cardNumber">Kortnummer*</label>
                                             <input type="number" placeholder="XXXX XXXX XXXX XXXX" name="cardnumber"
-                                             id="cardNumber"   required autocomplete="off">
+                                                id="cardNumber" required autocomplete="off">
                                         </div>
                                     </div>
 
                                     <div class="bookInputRow">
                                         <div class="bookInputGroup">
                                             <label for="expirationDate">Utgångsdatum*</label>
-                                            <input type="number" placeholder="XX/XX" name="expirationdate" id="expirationDate"  required
-                                                autocomplete="off">
+                                            <input type="number" placeholder="XX/XX" name="expirationdate"
+                                                id="expirationDate" required autocomplete="off">
                                         </div>
 
                                         <div class="bookInputGroup">
